--- a/Redoublet-frontend/Dockerfile
+++ b/Redoublet-frontend/Dockerfile
@@ -4,9 +4,11 @@ WORKDIR /app
 COPY . ./
 
 RUN npm install
-RUN npm run build
+#RUN npm run dev
+ENTRYPOINT [ "npm", "run", "dev" ]
 
 FROM nginx:1.21.3-alpine
 COPY --from=build-env /app/dist /usr/share/nginx/html
 
 EXPOSE 80
+
