--- a/Redoublet-frontend/Dockerfile
+++ b/Redoublet-frontend/Dockerfile
@@ -3,12 +3,11 @@ WORKDIR /app
 
 COPY . ./
 
-RUN npm install
-#RUN npm run dev
-ENTRYPOINT [ "npm", "run", "dev" ]
+RUN npm install && npm run build
 
 FROM nginx:1.21.3-alpine
 COPY --from=build-env /app/dist /usr/share/nginx/html
 
 EXPOSE 80
 
+CMD ["nginx", "-g", "daemon off;"]
