--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,20 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:80"
+    depends_on:
+      - backend
+    volumes:
+      - ./nginx:/etc/nginx/conf.d
+  
+  nginx:
+    image: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx:/etc/nginx/conf.d
+    depends_on:
+      - frontend
+      - backend
+    command: [nginx, '-g', 'daemon off;']
+    environment:
+      - NGINX_WORKER_PROCESSES=1
