--- a/Redoublet-website/package.json
+++ b/Redoublet-website/package.json
@@ -15,7 +15,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0-alpha1",
+    "jquery": "^3.6.3",
     "pinia": "^2.0.28",
+    "popper.js": "^1.16.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
