--- a/Redoublet-frontend/package.json
+++ b/Redoublet-frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.0-alpha1",
     "jquery": "^3.6.3",
     "pinia": "^2.0.28",
+    "pixi.js": "^7.1.4",
     "popper.js": "^1.16.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
